fix: 응답 필드 추가, Get 요청시 리퀘스트 바디를 파라미터로 받게끔 수정